--- a/modules/perception/data/params/radar_extrinsics.yaml
+++ b/modules/perception/data/params/radar_extrinsics.yaml
@@ -1,17 +1,17 @@
 header:
   seq: 0
   stamp:
-    secs: 0
     nsecs: 0
-  frame_id: front_6mm
+    secs: 0
+  frame_id: short_camera
 child_frame_id: radar
 transform:
-  translation:
-    x: 0.0
-    y: 1.0110000371933034
-    z: 2.4720000773668316
   rotation:
-    x: 0.5
-    y: -0.4999999999999999
-    z: 0.5
-    w: 0.5000000000000001
+    x: 0.4701276013773263
+    y: -0.4752457045828525
+    z: 0.5287298035712963
+    w: 0.5230357095975458
+  translation:
+    x: -0.01624105472697997
+    y: 1.153695517747563
+    z: 1.385179728580569
